--- a/compass-map/index.html
+++ b/compass-map/index.html
@@ -6,18 +6,25 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="theme-color" content="#f3f4f6" />
     <title>Compass Map</title>
+    <!-- Tailwind CSS (CDN is fine for this scale) -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Leaflet CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
     <style>
-      /* Fix for leaflet tiles in some contexts */
+      html, body, #root {
+        height: 100%;
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        overflow: hidden; /* Prevent scroll bounce on mobile */
+      }
       .leaflet-container {
         width: 100%;
         height: 100%;
-        background-color: #f0f0f0;
-      }
-      body {
-        overscroll-behavior: none;
+        background-color: #e5e7eb; /* tailwind gray-200 */
+        z-index: 0;
       }
     </style>
   <script type="importmap">
@@ -28,14 +35,15 @@
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0",
     "react-leaflet": "https://aistudiocdn.com/react-leaflet@^5.0.0",
-    "leaflet": "https://aistudiocdn.com/leaflet@^1.9.4"
+    "leaflet": "https://aistudiocdn.com/leaflet@^1.9.4",
+    "vite": "https://aistudiocdn.com/vite@^7.2.4",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1"
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
 </head>
   <body>
     <div id="root"></div>
-  <script type="module" src="/index.tsx"></script>
-</body>
+    <script type="module" src="/index.tsx"></script>
+  </body>
 </html>
