--- a/compass-map/index.html
+++ b/compass-map/index.html
@@ -1,49 +1,205 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta name="mobile-web-app-capable" content="yes" />
-    <meta name="theme-color" content="#f3f4f6" />
-    <title>Compass Map</title>
-    <!-- Tailwind CSS (CDN is fine for this scale) -->
-    <script src="https://cdn.tailwindcss.com"></script>
+<html lang="ja">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>コンパス方向線マップ</title>
+
     <!-- Leaflet CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+
     <style>
-      html, body, #root {
-        height: 100%;
-        width: 100%;
-        margin: 0;
-        padding: 0;
-        overflow: hidden; /* Prevent scroll bounce on mobile */
-      }
-      .leaflet-container {
-        width: 100%;
-        height: 100%;
-        background-color: #e5e7eb; /* tailwind gray-200 */
-        z-index: 0;
-      }
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
+        #map {
+            width: 100%;
+            height: 100%;
+        }
+        /* 左下の丸いコンパスボタン */
+        #compassBtn {
+            position: absolute;
+            left: 10px;
+            bottom: 80px;           /* 位置取得ボタンの上に被らないように */
+            width: 56px;
+            height: 56px;
+            background: white;
+            border-radius: 50%;
+            box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+            z-index: 1000;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 28px;
+            user-select: none;
+        }
+        #compassBtn:active {
+            background: #f0f0f0;
+        }
     </style>
-  <script type="importmap">
-{
-  "imports": {
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0",
-    "react-leaflet": "https://aistudiocdn.com/react-leaflet@^5.0.0",
-    "leaflet": "https://aistudiocdn.com/leaflet@^1.9.4",
-    "vite": "https://aistudiocdn.com/vite@^7.2.4",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1"
-  }
-}
-</script>
 </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
-  </body>
+<body>
+
+<div id="map"></div>
+
+<!-- コンパスボタン -->
+<div id="compassBtn" title="方向線を表示/非表示">🧭</div>
+
+<!-- Leaflet JS -->
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+
+<script>
+// 変数
+let map;
+let userMarker;
+let directionLine = null;        // 方向線（Polyline）
+let isLineVisible = false;
+let currentHeading = 0;          // 現在の向いている方向（度）
+
+// 地図初期化
+function initMap() {
+    map = L.map('map').setView([35.681, 139.767], 16);
+
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+        attribution: '&copy; OpenStreetMap contributors'
+    }).addTo(map);
+
+    // 現在地取得
+    map.locate({ setView: true, maxZoom: 18, watch: true });
+}
+
+// 位置取得成功時
+function onLocationFound(e) {
+    const radius = e.accuracy / 2;
+
+    if (!userMarker) {
+        userMarker = L.circle(e.latlng, radius).addTo(map);
+        L.marker(e.latlng).addTo(map)
+            .bindPopup("あなたはここ")
+            .openPopup();
+    } else {
+        userMarker.setLatLng(e.latlng);
+        userMarker.setRadius(radius);
+        map.setView(e.latlng);
+    }
+
+    // 現在地が取れたらコンパスイベントを有効化
+    enableCompass();
+}
+
+// 位置取得エラー
+function onLocationError(e) {
+    alert(e.message);
+}
+
+// コンパス（DeviceOrientation）の有効化
+function enableCompass() {
+    if (window.DeviceOrientationEvent) {
+        window.addEventListener('deviceorientation', handleOrientation);
+        
+        // iOS 13+ は許可が必要
+        if (DeviceOrientationEvent.requestPermission) {
+            document.getElementById('compassBtn').addEventListener('click', requestCompassPermission);
+        }
+    } else {
+        alert("この端末はコンパスに対応していません");
+    }
+}
+
+function requestCompassPermission() {
+    DeviceOrientationEvent.requestPermission()
+        .then(response => {
+            if (response === 'granted') {
+                window.addEventListener('deviceorientation', handleOrientation);
+            }
+        })
+        .catch(console.error);
+}
+
+// 方向が変わったとき
+function handleOrientation(event) {
+    if (event.alpha !== null) {
+        // iOS と Android で向きの計算が少し違うが、webkitCompassHeading があればそれを使う
+        if (event.webkitCompassHeading !== undefined) {
+            currentHeading = event.webkitCompassHeading;  // iOS
+        } else {
+            currentHeading = 360 - event.alpha;           // Android（大体合ってる）
+        }
+
+        // 線が表示されている状態ならリアルタイムで更新
+        if (isLineVisible && userMarker) {
+            drawDirectionLine();
+        }
+    }
+}
+
+// 方向線を描く（1000m先まで）
+function drawDirectionLine() {
+    if (!userMarker) return;
+
+    const center = userMarker.getLatLng();
+    const distance = 1000000; // 1km先まで（十分長い）
+
+    // 目的地の緯度経度を計算（簡易版：地球を平面と仮定）
+    const bearing = currentHeading;
+    const R = 6371000; // 地球の半径（m）
+    const rad = bearing * Math.PI / 180;
+
+    const lat1 = center.lat * Math.PI / 180;
+    const lon1 = center.lng * Math.PI / 180;
+
+    const lat2 = Math.asin(
+        Math.sin(lat1) * Math.cos(distance / R) +
+        Math.cos(lat1) * Math.sin(distance / R) * Math.cos(rad)
+    );
+    const lon2 = lon1 + Math.atan2(
+        Math.sin(rad) * Math.sin(distance / R) * Math.cos(lat1),
+        Math.cos(distance / R) - Math.sin(lat1) * Math.sin(lat2)
+    );
+
+    const endLatLng = L.latLng(lat2 * 180 / Math.PI, lon2 * 180 / Math.PI);
+
+    if (directionLine) {
+        directionLine.setLatLngs([center, endLatLng]);
+    } else {
+        directionLine = L.polyline([center, endLatLng], {
+            color: 'orange',
+            weight: 6,
+            opacity: 0.9
+        }).addTo(map);
+    }
+}
+
+// ボタンクリックでトグル
+document.getElementById('compassBtn').addEventListener('click', function() {
+    if (!userMarker) {
+        alert("現在地がまだ取得できていません");
+        return;
+    }
+
+    isLineVisible = !isLineVisible;
+
+    if (isLineVisible) {
+        drawDirectionLine();
+        this.style.background = '#fff3e0';
+    } else {
+        if (directionLine) {
+            map.removeLayer(directionLine);
+            directionLine = null;
+        }
+        this.style.background = 'white';
+    }
+});
+
+// イベント登録
+map.on('locationfound', onLocationFound);
+map.on('locationerror', onLocationError);
+
+// 地図初期化
+initMap();
+
+</script>
+</body>
 </html>
